--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@inlet/react-pixi": "6.8.0",
     "lint-staged": "13.0.3",
     "next": "12.3.0",
+    "pixi.js": "6.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
