--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
+    "@commitlint/cli": "17.1.2",
+    "@commitlint/config-conventional": "17.1.0",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@typescript-eslint/eslint-plugin": "5.36.0",
@@ -36,7 +36,7 @@
     "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-testing-library": "5.6.0",
     "eslint-plugin-unicorn": "43.0.2",
-    "husky": "^8.0.1",
+    "husky": "8.0.1",
     "typescript": "4.8.3"
   },
   "lint-staged": {
