feat: added styled-components and setup custom theme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@styles/*": ["src/styles/*"],
       "@views/*": ["src/views/*"],
     },
     "target": "esnext",
