--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.3.0",
     "pixi.js": "6.5.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "5.3.6"
   },
   "devDependencies": {
     "@commitlint/cli": "17.1.2",
@@ -23,6 +24,7 @@
     "@types/node": "18.7.18",
     "@types/pixi.js": "5.0.0",
     "@types/react": "18.0.20",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "5.36.0",
     "@typescript-eslint/parser": "5.36.0",
     "eslint-config-airbnb-base": "15.0.0",
